KubernetesVersion/Mac/Nginx/NginxEnvironment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ha
spec:
  replicas: 1                     # 初始副本数
  selector:
    matchLabels:
      app: nginx-ha
  template:
    metadata:
      labels:
        app: nginx-ha
    spec:
      containers:
      - name: nginx-ha
        image: nginx:stable-perl
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.25"
          limits:
            memory: "8Gi"
            cpu: "10"
        ports:
        - containerPort: 80
