KubernetesVersion/Mac/Nginx/NginxService.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-service
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
