KubernetesVersion/Mac/Nginx/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ha-service
spec:
  selector:
    app: nginx-ha
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
