KubernetesVersion/Mac/Nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ha-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - silverhand.personal.website
    secretName: silverhand-personal-website-tls
  rules:
  - host: silverhand.personal.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ha
            port:
              number: 80
